--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title>Zepto Carousel</title>
+    <title>Zepto-Carousel-Plugin</title>
     <link rel="stylesheet" href="styles.css">
     <link href="http://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>Zepto Carousel</h1>
-    <p><a href="//github.com/jcemer/zepto-carousel">github.com/jcemer/zepto-carousel</a></p>
+    <h1>Zepto-Carousel-Plugin</h1>
+    <a href="https://github.com/etanxing/zepto-carousel-plugin"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
     <div class="container">
     </div>
     <div class="slides">
