minor ui changes.

--- a/tss/index.html
+++ b/tss/index.html
@@ -16,6 +16,10 @@
       height: 100%;
     }
 
+    body {
+      margin: 0;
+    }
+
     .launch-page {
     background-image: -webkit-linear-gradient(195deg, #009acc, #363795);
     background-image: -o-linear-gradient(195deg, #009acc, #363795);
@@ -174,6 +178,6 @@
     </div>
   </div>
   <script>__REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__</script>
-  <script type="text/javascript" src="assets/app.js"></script>
+  <script type="text/javascript" src="assets/app.1fb09943d2c12d5c11c7.js"></script>
 </body>
 </html>
