--- a/tss/index.html
+++ b/tss/index.html
@@ -5,6 +5,8 @@
   <title>Top School Selector By Workswell</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <style type="text/css">
@@ -164,7 +166,7 @@
       opacity: 0;
     }
     }
-  </style
+  </style>
 </head>
 <body>
   <div id="app">
