--- a/wfa/index_4.html
+++ b/wfa/index_4.html
@@ -160,12 +160,11 @@
                                         <tr>
                                             <td align="left" class="ewcTHead">Your data</th>
                                                 <td align="right" class="ewcTHead">
-                                                    <span class="ewcLink" onclick="ewcShow('ewcUserCriteria')">Show</span> &nbsp;|&nbsp;
-                                                    <span class="ewcLink" onclick="ewcHide('ewcUserCriteria')">Hide</span>
+                                                <a href="#ewcUserCriteria" class="btn btn-default" data-toggle="collapse" aria-expanded="true" aria-controls="ewcUserCriteria"><span>Hide</span><span>Show</span></a>
                                                 </td>
                                         </tr>
                                     </tbody>
-                                    <tbody id="ewcUserCriteria">
+                                    <tbody id="ewcUserCriteria" class="collapse in">
                                         <tr>
                                             <td>&nbsp;</td>
                                             <td class="ewcBold">Benchmark Result (AUD)</td>
@@ -213,12 +212,11 @@
                                         <tr>
                                             <td align="left" class="ewcTHead">Calculated assumptions</td>
                                             <td align="right" class="ewcTHead">
-                                                <span class="ewcLink" onclick="ewcShow('ewcAssumptions')">Show</span> &nbsp;|&nbsp;
-                                                <span class="ewcLink" onclick="ewcHide('ewcAssumptions')">Hide</span>
+                                                <a href="#ewcAssumptions" class="btn btn-default" data-toggle="collapse" aria-expanded="true" aria-controls="ewcAssumptions"><span>Hide</span><span>Show</span></a>
                                             </td>
                                         </tr>
                                     </tbody>
-                                    <tbody id="ewcAssumptions">
+                                    <tbody id="ewcAssumptions" class="collapse in">
                                         <tr>
                                             <td></td>
                                             <td class="ewcBold">Benchmark Result (AUD)</td>
