--- a/adoptapet/index.html
+++ b/adoptapet/index.html
@@ -1,12 +1,27 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <title>
-            Workswell - Frontend Development Specialist
-        </title>
-        <script>
-            window.location.replace("https://twitter.com/adoptapetatsa");
-        </script>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-248428-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'UA-248428-1');
+	</script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Workswell - Frontend Development Specialist</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div id="root">
+				<div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+		</div>
+    <script src="script.js"></script>
+</body>
 </html>
