Avoid web cache

--- a/adoptapet/index.html
+++ b/adoptapet/index.html
@@ -15,12 +15,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Workswell - Frontend Development Specialist</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style-2578.css">
 </head>
 
 <body>
     <div id="root">
 		</div>
-    <script src="script.js"></script>
+    <script src="script-2578.js"></script>
 </body>
 </html>
