Show local datetime

--- a/adoptapet/index.html
+++ b/adoptapet/index.html
@@ -21,6 +21,7 @@
 <body>
     <div id="root">
 		</div>
-    <script src="script-2578.js"></script>
+		<script src="date_fns.min.js"></script>
+    <script src="script-2579.js"></script>
 </body>
 </html>
