Optimise desktop view

--- a/adoptapet/index.html
+++ b/adoptapet/index.html
@@ -15,13 +15,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Workswell - Frontend Development Specialist</title>
-	<link rel="stylesheet" href="style-2578.css">
+	<link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
+	<link rel="stylesheet" href="style-2580.css">
 </head>
 
 <body>
     <div id="root">
 		</div>
 		<script src="date_fns.min.js"></script>
-    <script src="script-2579.js"></script>
+    <script src="script-2580.js"></script>
 </body>
 </html>
