Redirect to https://flurly.com/p/celsius

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             Workswell - Frontend Development Specialist
         </title>
         <script>
-            window.location.replace("http://workswell.com.au");
+            window.location.replace("https://flurly.com/p/celsius");
         </script>
     </head>
 </html>
