Redirect to https://gumroad.com/l/celsius

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             Workswell - Frontend Development Specialist
         </title>
         <script>
-            window.location.replace("https://flurly.com/p/celsius");
+            window.location.replace("https://gumroad.com/l/celsius");
         </script>
     </head>
 </html>
