Redirect to https://gumroad.com/l/celsius

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>
-            Workswell - Frontend Development Specialist
+        Celsius Network Guide for Beginners by Igniteit 
         </title>
         <script>
             window.location.replace("https://gumroad.com/l/celsius");
